Fixed specific buttons not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,8 @@ img{
 .glass {
   background: linear-gradient(to right bottom, rgba(255, 204, 102, 0.5), rgba(255, 204, 102, 0.3));
   backdrop-filter: blur(100rem);
+  border-top: 1px solid rgba(255, 204, 102, 0.5);
+  border-left: 1px solid rgba(255, 204, 102, 0.5);
 }
 
 
@@ -1224,8 +1226,6 @@ input[type='radio']:checked:after {
   .mission__data{
     text-align: center;
     padding: 1rem 1rem 1rem;
-    background-color: white;
-    box-shadow: 0 2px 6px rgba(35, 10, 58, 0.3);
     border-radius: 1rem;
 }
 .about__container{
@@ -1268,9 +1268,6 @@ input[type='radio']:checked:after {
 .send{
   background-color: var(--first-color-send);
   margin-top: 7rem;
-}
-.send__title, .send__description{
-  color: #fff;
 }
 
 .send__description{
